--- a/api/dealmakerapi/src/main/webapp/WEB-INF/web.xml
+++ b/api/dealmakerapi/src/main/webapp/WEB-INF/web.xml
@@ -12,13 +12,43 @@
 	version="3.1">
 
 	<servlet>
-		<servlet-name>HelloController</servlet-name>
-		<servlet-class>controllers.HelloController</servlet-class>
+		<servlet-name>HealthServlet</servlet-name>
+		<servlet-class>servlets.HealthServlet</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>HelloController</servlet-name>
-		<url-pattern>/hello/*</url-pattern>
+		<servlet-name>HealthServlet</servlet-name>
+		<url-pattern>/health/*</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>MatchServlet</servlet-name>
+		<servlet-class>servlets.MatchServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>MatchServlet</servlet-name>
+		<url-pattern>/matches/*</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>DealServlet</servlet-name>
+		<servlet-class>servlets.DealServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>DealServlet</servlet-name>
+		<url-pattern>/deals/*</url-pattern>
+	</servlet-mapping>
+	
+		<servlet>
+		<servlet-name>InfoServlet</servlet-name>
+		<servlet-class>servlets.InfoServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>InfoServlet</servlet-name>
+		<url-pattern>/info/*</url-pattern>
+	</servlet-mapping>
+	
 </web-app>
