--- a/api/dealmakerapi/pom.xml
+++ b/api/dealmakerapi/pom.xml
@@ -14,12 +14,24 @@
 	    <version>4.0.1</version>
 	    <scope>provided</scope>
 	</dependency>
+	<dependency>
+    <groupId>org.javatuples</groupId>
+    <artifactId>javatuples</artifactId>
+    <version>1.2</version>
+</dependency>
 		    <!-- https://mvnrepository.com/artifact/org.json/json -->
 	<dependency>
 	    <groupId>org.json</groupId>
 	    <artifactId>json</artifactId>
 	    <version>20190722</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+<dependency>
+    <groupId>org.xerial</groupId>
+    <artifactId>sqlite-jdbc</artifactId>
+    <version>3.28.0</version>
+</dependency>
+	
   </dependencies>
   
   <build>
