--- a/preprocc/pom.xml
+++ b/preprocc/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
+            <dependency>
+                <groupId>org.xerial</groupId>
+                <artifactId>sqlite-jdbc</artifactId>
+                <version>3.27.2.1</version>
+            </dependency>
     </dependencies>
 
 </project>
